# marketplace_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  file_structure.md  new_file.txt  pyproject.toml  requirements.txt  route_test.py  run.py
app/: __init__.py  cli.py  config.py  errors.py  extensions.py  forms.py  logging.py  route_utils.py  routes.py
app/api/: __init__.py  admin.py  auth.py  categories.py  errors.py  listings.py  users.py
app/models/: Category.py  Image.py  Listing.py  User.py  __init__.py  mixin.py
app/static/css/: about.css  add_listing.css  base.css  categories.css  category.css  colors.css  contact.css  edit_profile.css  index.css  listing.css  listings.css  login.css  profile.css  register.css
app/static/css/components/: buttons.css  categories_list.css  colors.css  confirm_modal.css  forms.css  listing_card.css  listing_grid.css  (+1 more)
app/static/js/: activationFunctions.js  adminMenu.js  confirmModal.js  fileUpload.js  filterOverlay.js  listing.js  menu.js  priceRange.js  profile.js
app/templates/: 404.html  500.html  about_us.html  add_listing.html  base.html  categories.html  category.html  contact_us.html  deactivated_listings.html  deactivated_users.html  edit_profile.html  errors.html  index.html  listing.html  listings.html  login.html  profile.html  register.html  sold_listings.html
app/templates/components/: categories_list.html  confirm_modal.html  listing_card.html  paginated_listings.html
migrations/versions/: 2026_04_12_add_image_data.py  49638f6967c2_add_created_at.py
