[project]
name = "marketplace-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.17.2",
    "blinker==1.9.0",
    "click==8.1.8",
    "email-validator==2.2.0",
    "faker==35.2.0",
    "flask==3.1.2",
    "flask-httpauth==4.8.0",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-session==0.8.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "greenlet==3.1.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "pillow==11.1.0",
    "python-dotenv==1.2.1",
    "requests==2.32.3",
    "sqlalchemy==2.0.44",
    "typing-extensions==4.12.2",
    "werkzeug==3.1.3",
]
